[package]
name = "covenants-demo"
version = "0.1.0"
authors = ["sanket1729 <sanket1729@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.25"
miniscript = {git = "https://github.com/sanket1729/rust-miniscript-elements"}
elements = {git = "https://github.com/sanket1729/rust-elements/", branch = "elements_opcodes"}
rand = "0.7.3"
rust_decimal = "1.8.1"

[dependencies.serde]
version = "1.0"
optional = true
